--- a/zapchat-server/package.json
+++ b/zapchat-server/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "firebase-admin": "^6.3.0",
     "morgan": "^1.9.1"
