--- a/ZapChat/package.json
+++ b/ZapChat/package.json
@@ -22,12 +22,14 @@
     "@angular/router": "~7.0.0",
     "angularfire2": "^5.1.1",
     "core-js": "^2.5.4",
+    "firebase": "^5.6.0",
+    "firebase-admin": "^6.3.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.10.7",
-    "@angular/cli": "^7.1.0",
+    "@angular/cli": "^7.1.2",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
     "@types/jasmine": "~2.8.8",
