--- a/ZapChat/package.json
+++ b/ZapChat/package.json
@@ -22,9 +22,10 @@
     "@angular/router": "~7.0.0",
     "angularfire2": "^5.1.1",
     "core-js": "^2.5.4",
-    "firebase": "^5.6.0",
+    "firebase": "^5.7.0",
     "firebase-admin": "^6.3.0",
-    "rxjs": "~6.3.3",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
