--- a/ZapChat/angular.json
+++ b/ZapChat/angular.json
@@ -24,7 +24,9 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+			  "firebase-messaging-sw.js", // <-- here
+			  "manifest.json" // <-- and here
             ],
             "styles": [
               "src/styles.scss"
